sfdx-source/force-app/main/default/objects/Brand__c/Brand__c.object-meta.xml
<CustomObject>
    <description>LEM-564: A brand is a concept – a name, term, design, symbol, or any other feature that identifies one seller&apos;s goods or services as distinct from those of other sellers. The brand may have one or more brands underneath it (this will be represented as a brand relationship). Brands are owned by Businesses.</description>
    <label>Brand</label>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>