sfdx-source/force-app/main/default/objects/Brand__c/fields/Brand_ID18__c.field-meta.xml
<CustomField>
    <fullName>Brand_ID18__c</fullName>
    <description>LEM-5304: This field is used to store the 18 digit SFDC Id for the brand.</description>
    <formula>CASESAFEID(Id)</formula>
    <label>Brand ID18</label>
    <type>Text</type>
</CustomField>