sfdx-source/force-app/main/default/objects/Brand__c/fields/Brand_Owner__c.field-meta.xml
<CustomField>
    <fullName>Brand_Owner__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-564: Represents the Owner of the Brand.</description>
    <inlineHelpText>Represents the Owner of the Brand</inlineHelpText>
    <label>Brand Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brands</relationshipLabel>
    <relationshipName>Brands</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>