sfdx-source/force-app/main/default/objects/Brand__c/fields/Brand_Type__c.field-meta.xml
<CustomField>
    <fullName>Brand_Type__c</fullName>
    <description>LEM-14347: New field to track brand type</description>
    <inlineHelpText>Indicate if this is a virtual brand</inlineHelpText>
    <label>Brand Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Virtual Brand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>