sfdx-source/force-app/main/default/objects/Brand__c/fields/Price_Range__c.field-meta.xml
<CustomField>
    <fullName>Price_Range__c</fullName>
    <defaultValue>&apos;$$&apos;</defaultValue>
    <description>LEM-6195: It indicates the price range that will be used to establish # of dollar signs on DoorDash App.</description>
    <label>Price Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$</fullName>
            </value>
            <value>
                <fullName>$$</fullName>
            </value>
            <value>
                <fullName>$$$</fullName>
            </value>
            <value>
                <fullName>$$$$</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>