sfdx-source/force-app/main/default/objects/Brand__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <description>LEM-14648: It is used to capture the SSMO UUID received by Mulesoft in the payload .</description>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>